# shimkit

./: Cargo.toml  LICENSE  README.md  pod.json
crates/shimkit/: Cargo.toml  build.rs
crates/shimkit-macros/: Cargo.toml
crates/shimkit-macros/src/: lib.rs
crates/shimkit-types/: Cargo.toml  build.rs
crates/shimkit-types/protos/github.com/containerd/containerd/api/runtime/task/v2/: shim.proto
crates/shimkit-types/protos/k8s.io/cri-api/pkg/apis/runtime/v1/: api.proto
crates/shimkit-types/src/: lib.rs
crates/shimkit/examples/: logger.rs  minimal.rs
crates/shimkit/examples/server/: mod.rs  sandbox.rs  task.rs
crates/shimkit/protos/microsoft/hcsshim/cmd/containerd-shim-runhcs-v1/stats/: stats.proto
crates/shimkit/src/: args.rs  event.rs  fd.rs  fs.rs  lib.rs  run.rs  stdio.rs  utils.rs
crates/shimkit/src/sys/unix/: fd.rs  mod.rs  stdio.rs
crates/shimkit/src/sys/windows/: fd.rs  mod.rs  stdio.rs
