[workspace]
resolver = "2"
members = [
    "crates/shimkit",
    "crates/shimkit-types",
    "crates/shimkit-macros",
]

[workspace.package]
edition = "2021"
version = "0.2.2"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jprendes/shimkit"
homepage = "https://github.com/jprendes/shimkit"

[workspace.dependencies]
shimkit = { path = "crates/shimkit", version = "0.2.2" }
shimkit-types = { path = "crates/shimkit-types", version = "0.2.2" }
shimkit-macros = { path = "crates/shimkit-macros", version = "0.2.2" }
trapeze = "0.7.4"
trapeze-codegen = "0.7.4"
prost = "0.13"
prost-types = "0.13"
tokio = "1"

[profile.release]
opt-level = 3
strip = "symbols"
panic = "abort"
