[package]
name = "shimkit-macros"
description = "Macros for shimskit"
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
darling = "0.20"