[package]
name = "shimkit-types"
description = "Types for shimkit"
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
prost = "0.13"
prost-types = "0.13"
trapeze = { version = "0.7.1", path = "/home/jprendes/Projects/trapeze/crates/trapeze" }

[build-dependencies]
trapeze-codegen = { version = "0.7.0", path = "/home/jprendes/Projects/trapeze/crates/trapeze-codegen" }
