[package]
name = "shimkit-types"
description = "Types for shimkit"
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
trapeze.workspace = true

[build-dependencies]
trapeze-codegen.workspace = true
