[package]
name = "shimkit"
description = "Tools to build containerd shims"
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait = "0.1"
go-flag = "0.1.0"
libc = "0.2"
oci-spec = "0.7"
anyhow = "1"
os_str_bytes = "7"
shimkit-macros.workspace = true
shimkit-types.workspace = true
prost.workspace = true
trapeze.workspace = true
tokio = { workspace = true, features = ["io-std", "process", "fs", "signal"] }

[dev-dependencies]
tempfile = "3"
env_logger = "0.11"
log = "0.4"